--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is my web site to present information such as: Work, Experience, Portfolio, Contact",
   "main": "scripts.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" 
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,15 +17,21 @@
   },
   "homepage": "https://github.com/tuanrobo/tuanrobo.github.io#readme",
   "dependencies": {
+    "autoprefixer": "^9.3.1",
     "bourbon": "^5.1.0",
+    "cssnano": "^4.1.7",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
     "gulp-watch": "^5.0.1",
     "node-bourbon": "^4.2.8",
     "node-sass": "^4.10.0",
+    "postcss-scss": "^2.0.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "@types/cssnano": "^4.0.0",
+    "@types/gulp-sass": "0.0.31",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^8.0.0"
   }
 }
